--- a/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
+++ b/TestCalendar/Test Calendar/Base.lproj/Main.storyboard
@@ -103,7 +103,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="47.857142857142854" height="25"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="48" height="25"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="47.857142857142854" height="25"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
                                     </collectionViewCell>
