--- a/TestCalendar/Test Calendar/AddEvent.storyboard
+++ b/TestCalendar/Test Calendar/AddEvent.storyboard
@@ -31,9 +31,9 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OzF-21-Xf5">
-                                        <rect key="frame" x="19.5" y="15" width="30" height="30"/>
-                                        <color key="backgroundColor" red="1" green="0.94370199269999999" blue="0.29835359659999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OzF-21-Xf5">
+                                        <rect key="frame" x="19.5" y="19" width="15" height="22"/>
+                                        <state key="normal" image="close"/>
                                         <connections>
                                             <action selector="dismiss:" destination="9NQ-Iw-hfX" eventType="touchUpInside" id="spD-NO-pvL"/>
                                         </connections>
@@ -116,4 +116,7 @@
             <point key="canvasLocation" x="125.59999999999999" y="169.56521739130437"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="close" width="15" height="14"/>
+    </resources>
 </document>
