--- a/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
+++ b/TestCalendar/Test Calendar/MakeTestCalendar.storyboard
@@ -12,7 +12,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--テスト又はレポートを追加-->
+        <!--テスト・レポート一覧-->
         <scene sceneID="Ex1-zO-r3G">
             <objects>
                 <viewController id="GNh-Mu-yVB" customClass="TestListViewController" customModule="Test_Calendar" customModuleProvider="target" sceneMemberID="viewController">
@@ -133,34 +133,6 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="add" rowHeight="48" id="RKc-J9-Hxp">
-                                        <rect key="frame" x="0.0" y="139" width="345" height="48"/>
-                                        <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RKc-J9-Hxp" id="Dqg-Ur-mdS">
-                                            <rect key="frame" x="0.0" y="0.0" width="345" height="47.5"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="add" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nn4-6y-rBs">
-                                                    <rect key="frame" x="138" y="4" width="70" height="40"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="height" constant="40" id="J2S-fy-S4E"/>
-                                                        <constraint firstAttribute="width" constant="70" id="ldd-in-DZk"/>
-                                                    </constraints>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                                    <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                            </subviews>
-                                            <constraints>
-                                                <constraint firstItem="Nn4-6y-rBs" firstAttribute="centerY" secondItem="Dqg-Ur-mdS" secondAttribute="centerY" id="fKB-d5-a2C"/>
-                                                <constraint firstItem="Nn4-6y-rBs" firstAttribute="centerX" secondItem="Dqg-Ur-mdS" secondAttribute="centerX" id="hqQ-O2-vQv"/>
-                                            </constraints>
-                                        </tableViewCellContentView>
-                                        <color key="backgroundColor" red="1" green="0.26048644360000001" blue="0.080657623440000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        <connections>
-                                            <segue destination="T6i-wp-jlI" kind="showDetail" trigger="accessoryAction" id="uu8-gA-Bac"/>
-                                        </connections>
-                                    </tableViewCell>
                                 </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="GNh-Mu-yVB" id="Zmu-l6-p76"/>
@@ -176,7 +148,7 @@
                             <constraint firstItem="oxy-BG-YRZ" firstAttribute="width" secondItem="V2v-6E-5Bf" secondAttribute="width" multiplier="0.92" id="vf5-Gc-eaD"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="テスト又はレポートを追加" id="w4Q-n1-5CG"/>
+                    <navigationItem key="navigationItem" title="テスト・レポート一覧" id="w4Q-n1-5CG"/>
                     <connections>
                         <outlet property="navigationBar" destination="w4Q-n1-5CG" id="6eZ-Oi-0t0"/>
                         <outlet property="testListView" destination="oxy-BG-YRZ" id="03F-n6-xpk"/>
@@ -204,6 +176,13 @@
                                     <segue destination="hTV-uz-Ilp" kind="embed" id="cgt-No-Vg9"/>
                                 </connections>
                             </containerView>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4M7-pJ-OJC">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="テスト及びレポートの追加" id="k2e-Oo-f2k"/>
+                                </items>
+                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -247,13 +226,13 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dqh-5s-wb9">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dqh-5s-wb9">
                                         <rect key="frame" x="20" y="18" width="24" height="24"/>
-                                        <color key="backgroundColor" red="1" green="0.74436618470000004" blue="0.91475635690000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="24" id="m1I-h0-xEq"/>
                                             <constraint firstAttribute="width" secondItem="Dqh-5s-wb9" secondAttribute="height" multiplier="1:1" id="xnb-wn-ycJ"/>
                                         </constraints>
+                                        <state key="normal" image="arrow-left"/>
                                         <connections>
                                             <action selector="backButton:" destination="DHT-LE-U2V" eventType="touchUpInside" id="qAL-lW-w6e"/>
                                         </connections>
@@ -283,7 +262,6 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Gxg-jS-mHK" userLabel="PM" customClass="WatchButton" customModule="Test_Calendar" customModuleProvider="target">
                                         <rect key="frame" x="267" y="267" width="44" height="44"/>
-                                        <color key="backgroundColor" red="1" green="0.26048644360000001" blue="0.080657623440000006" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="4Dw-g7-k7H"/>
                                             <constraint firstAttribute="width" secondItem="Gxg-jS-mHK" secondAttribute="height" multiplier="1:1" id="uG3-vm-k27"/>
@@ -294,7 +272,6 @@
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="etb-L7-Tp6" userLabel="AM" customClass="WatchButton" customModule="Test_Calendar" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="267" width="44" height="44"/>
-                                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="44" id="Bxe-H7-eMj"/>
                                             <constraint firstAttribute="width" secondItem="etb-L7-Tp6" secondAttribute="height" multiplier="1:1" id="K3k-A4-TGg"/>
@@ -403,7 +380,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="HJ7-0Q-E4W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1586" y="1108"/>
+            <point key="canvasLocation" x="-954" y="1079"/>
         </scene>
         <!--Select Calendar View Controller-->
         <scene sceneID="Rth-iR-qTn">
@@ -424,14 +401,13 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UVQ-Hg-dnm">
                                 <rect key="frame" x="0.0" y="20" width="375" height="60"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="24h-j9-DPA">
-                                        <rect key="frame" x="20" y="18" width="24" height="24"/>
-                                        <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="24h-j9-DPA">
+                                        <rect key="frame" x="19.5" y="18" width="24" height="24"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="24h-j9-DPA" secondAttribute="height" multiplier="1:1" id="GAm-M2-XeS"/>
                                             <constraint firstAttribute="width" constant="24" id="wxn-sQ-qil"/>
                                         </constraints>
-                                        <state key="normal" title="Button"/>
+                                        <state key="normal" title="Button" image="arrow-left"/>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="スケジュールを選択" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dFq-FI-NGP">
                                         <rect key="frame" x="100" y="18" width="175" height="25"/>
@@ -491,7 +467,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hjv-TX-hqj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-799" y="1106"/>
+            <point key="canvasLocation" x="-22" y="1079"/>
         </scene>
         <!--Add Detail View Controller-->
         <scene sceneID="pnn-9G-AMF">
@@ -770,4 +746,7 @@
             <point key="canvasLocation" x="-2042" y="170"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow-left" width="8" height="12"/>
+    </resources>
 </document>
